# linked

./: .editorconfig  .gitignore  .nvim.lua  .prettierignore  Cargo.toml  LICENSE  README.md  config.example.toml  flake.nix
assets/: styles.css
migrations/: 0001_bookmarks.down.sql  0001_bookmarks.up.sql  0001_testuser.up.sql
nix/: package.nix  pre-commit-hooks.nix  prettier-plugin-jinja-template.nix  shell.nix  treefmt.nix
src/: config.rs  error.rs  lib.rs  main.rs
src/models/: appstate.rs  bookmark_tags.rs  bookmarks.rs  mod.rs  sessions.rs  tags.rs  users.rs
src/web/: assets.rs  mod.rs
src/web/pages/: bookmarks.rs  index.rs  login.rs  mod.rs  new.rs
templates/: base.html  bookmarks.html  error.html  index.html  login.html  new.html
test-var/: config.example.toml  htpasswd_example  linked.db
