[dependencies]
axum = "0.8.1"
confy = "0.6.1"
serde = {version = "1.0.218", features = ["derive"]}
sqlx = {version = "0.8.3", features = ["sqlite", "runtime-tokio"]}
thiserror = "2.0.11"
tokio = {version = "1.20.0", features = ["macros", "rt-multi-thread"]}
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[package]
name = "linked"
version = "0.1.0"
edition = "2021"
