[dependencies]
askama = {version = "0.12.1", features = ["with-axum"]}
askama_axum = "0.4.0"
axum = {version = "0.7.9", features = ["macros"]}
bcrypt = "0.17.0"
ciborium = "0.2.2"
confy = "0.6.1"
serde = {version = "1.0.218", features = ["derive"]}
sqlx = {version = "0.8.3", features = ["runtime-tokio", "sqlite"]}
thiserror = "2.0.11"
tokio = {version = "1.20.0", features = ["macros", "rt-multi-thread"]}
tower-http = {version = "0.6.2", features = ["fs"]}
tower-sessions = "0.13.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = {version = "1.14.0", features = ["serde", "v4"]}

[package]
name = "linked"
version = "0.1.0"
edition = "2021"
